# astropost

./: GEMINI.md  main.py  pyproject.toml
legacy/: email-report.py  get_email_by_id.py  get_email_by_id.readme.md  get_emails.py  get_emails.readme.md  send_email.md  send_email.py  temp_email_script.py
src/astropost/: client.py  main.py  models.py
tests/: comprehensive_test.py  debug_actions.py  mark_unread.py  populate_inbox.py  test_cli.py
